index file revised

--- a/00-Docker-Images/01-kubenginx/V4-Release/index.html
+++ b/00-Docker-Images/01-kubenginx/V4-Release/index.html
@@ -4,5 +4,7 @@
       <h1>Welcome to Stack Simplify</h1>
       <p>Kubernetes Fundamentals Demo</p>
       <p>Application Version: V4</p>
+      <p>Speedy software development</p>
+      <p>Delivery High Quality Critical and Secure software</p>
    </body>
 </html>
